--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["n1k0din <nik726@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.2.3"
+pytest = "^6.2.5"
+pytest-django = "^4.4.0"
 
 [tool.poetry.dev-dependencies]
 
