--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.9"
 Django = "^3.2.3"
 pytest = "^6.2.5"
 pytest-django = "^4.4.0"
+python-dotenv = "^0.19.0"
+pymongo = {extras = ["srv"], version = "^3.12.0"}
 
 [tool.poetry.dev-dependencies]
 
