--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ pytest = "^6.2.5"
 pytest-django = "^4.4.0"
 python-dotenv = "^0.19.0"
 pymongo = {extras = ["srv"], version = "^3.12.0"}
+certifi = "^2021.10.8"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 
