--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^0.19.0"
 pymongo = {extras = ["srv"], version = "^3.12.0"}
 certifi = "^2021.10.8"
 requests = "^2.26.0"
+djangorestframework = "^3.12.4"
 
 [tool.poetry.dev-dependencies]
 
